--- a/rad.html
+++ b/rad.html
@@ -10,8 +10,14 @@
     <script src="assets/js/sticky.js"></script>
     <script src="assets/js/uikit.js"></script>
 </head>
+
 <!-- Copy only whats below -->
-<div class="uk-grid">
+    <div class="uk-width-1-1 uk-text-center uk-margin-large">
+        <h2>
+            RAD can be confusing we can help...
+        </h2>
+    </div>
+<div class="uk-grid uk-margin-large">
     <div class="uk-width-1-2">
         <h1>Pain Points</h1>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -23,24 +29,25 @@
     </div>
 </div>
     <!-- Starting What We Do Section -->
-<div class="uk-grid">
+
+<div class="uk-grid uk-margin-large">
 <div class="uk-width-1-1 uk-text-center uk-margin-large">
     <h1 class="uk-margin-large">What We Do</h1>
 </div>
 <div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center">
-    <a href="https://linkedin.com" class="uk-icon-large uk-icon-check"></a>
+    <a class="uk-icon-large uk-icon-check"></a>
     <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
         cumquetemporibus neque hic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
         delectus, fugit doloremque excepturisequi.Facilis!</p>
 </div>
 <div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center ">
-    <a href="https://linkedin.com" class="uk-icon-large uk-icon-check"></a>
+    <a class="uk-icon-large uk-icon-check"></a>
     <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
         cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
         delectus, fugit doloremque excepturisequi. Facilis!</p>
 </div>
 <div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center">
-    <a href="https://linkedin.com" class="uk-icon-large uk-icon-check "></a>
+    <a class="uk-icon-large uk-icon-check "></a>
     <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
         cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
         delectus, fugit doloremque excepturisequi. Facilis!</p>
@@ -58,7 +65,7 @@
                 delectus, fugit doloremque excepturisequi. Facilis!</p>
         </div>
         <div class="uk-width-1-2">
-            <img class=" uk-align-left" src=" https://via.placeholder.com/500x300" alt="">
+            <img class=" uk-align-left" src="https://via.placeholder.com/500x300" alt="">
         </div>
         <div class="uk-width-1-2">
             <img class=" uk-align-right" src="https://via.placeholder.com/500x300" alt="">
@@ -70,7 +77,7 @@
         </div>
     </div>
     <!-- How we can help version 2 -->
-    <div class="uk-grid">
+    <div class="uk-grid uk-margin-large">
         <div class="uk-width-1-1 uk-text-center uk-margin-large">
             <h1>How we can help Version 2</h1>
         </div>
@@ -137,5 +144,9 @@
         </div>
         <div class="uk-width-1-2">
             <h2>Ready to talk?</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum
+                beatae modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis,
+                soluta magnam sequi!</p>
+            <a class="uk-button" href="tel:8772886040">Call: 877.288.6040</a>
         </div>
     </div>
