--- a/rad.html
+++ b/rad.html
@@ -1,152 +1,130 @@
-<!-- Only used for local mock -->
-
-<head>
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/autocomplete.js"></script>
-    <script src="assets/js/jquery-migrate.min.js"></script>
-    <script src="assets/js/search.js"></script>
-    <script src="assets/js/sticky.js"></script>
-    <script src="assets/js/uikit.js"></script>
-</head>
-
 <!-- Copy only whats below -->
-    <div class="uk-width-1-1 uk-text-center uk-margin-large">
-        <h2>
-            RAD can be confusing we can help...
-        </h2>
-    </div>
+<div class="uk-width-1-1 uk-text-center uk-margin-large">
+    <hr id="system-readmore" />
+    <h2>RAD can be confusing we can help...</h2>
+</div>
+
 <div class="uk-grid uk-margin-large">
     <div class="uk-width-1-2">
         <h1>Pain Points</h1>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-            est laborum.</p>
+
+        <p>! We’ve worked with large and small housing authorities across the country providing consulting services, CNA
+            and ESA reports and everything else needed to bring your project from concept to reality.</p>
     </div>
-    <div class="uk-width-1-2">
-        <img src="https://via.placeholder.com/400" alt="">
-    </div>
+
+    <div class="uk-width-1-2"><img alt="" src="https://via.placeholder.com/400" style="" /></div>
 </div>
-    <!-- Starting What We Do Section -->
+<!-- Starting What We Do Section -->
 
 <div class="uk-grid uk-margin-large">
-<div class="uk-width-1-1 uk-text-center uk-margin-large">
-    <h1 class="uk-margin-large">What We Do</h1>
-</div>
-<div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center">
-    <a class="uk-icon-large uk-icon-check"></a>
-    <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        cumquetemporibus neque hic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
-        delectus, fugit doloremque excepturisequi.Facilis!</p>
-</div>
-<div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center ">
-    <a class="uk-icon-large uk-icon-check"></a>
-    <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
-        delectus, fugit doloremque excepturisequi. Facilis!</p>
-</div>
-<div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center">
-    <a class="uk-icon-large uk-icon-check "></a>
-    <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
-        delectus, fugit doloremque excepturisequi. Facilis!</p>
-</div>
-</div>
-    <!-- Starting How we can help section -->
-    <div class="uk-grid uk-margin-large">
-        <div class="uk-width-1-1 uk-text-center uk-margin-large">
-            <h1>How we can help</h1>
-        </div>
-        <div class="uk-width-1-2">
-            <p class="uk-text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in
-                mollitia
-                delectus, fugit doloremque excepturisequi. Facilis!</p>
-        </div>
-        <div class="uk-width-1-2">
-            <img class=" uk-align-left" src="https://via.placeholder.com/500x300" alt="">
-        </div>
-        <div class="uk-width-1-2">
-            <img class=" uk-align-right" src="https://via.placeholder.com/500x300" alt="">
-        </div>
-        <div class="uk-width-1-2 uk-margin">
-            <p class="uk-text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in
-                mollitia delectus, fugit doloremque excepturisequi. Facilis!</p>
-        </div>
+    <div class="uk-width-1-1 uk-text-center uk-margin-large">
+        <h1 class="uk-margin-large">What We Do</h1>
     </div>
-    <!-- How we can help version 2 -->
-    <div class="uk-grid uk-margin-large">
-        <div class="uk-width-1-1 uk-text-center uk-margin-large">
-            <h1>How we can help Version 2</h1>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
+
+    <div class="uk-width-1-1 uk-margin uk-panel-box  uk-text-center">
+        <p class="uk-text-left uk-panel-space">D3G has 25 years of experience with HUD, RAD, FHA, Section 8 PBRA/PBV,
+            LIHTC and mixed finance real estate repositioning services. Our program access and knowledge of HUD
+            electronic tools (e-CNA &amp; HEROS) combined with early planning transactional guidance from knowledgeable,
+            in-house affordable housing professionals is why you want D3G as your RAD guide.</p>
+    </div>
+</div>
+
+<div class="uk-grid uk-margin-large">
+    <div class="uk-width-1-1 uk-text-center uk-margin-large">
+        <h1>How we can help</h1>
+    </div>
+
+    <div class="uk-width-1-2">
+        <p class="uk-text-left">We’ve supported more than 1,000 successful RAD projects and completed over 900 CNA
+            e-tools and 500 environmental/NEPA/HEROS Reports for RAD. Four out of the five largest Public Housing
+            Agencies in the country have chosen D3G as their due diligence provider and consultant. We’ve also had great
+            success working with some of the smallest PHA’s too.</p>
+    </div>
+
+    <div class="uk-width-1-2"><img alt="" class="uk-align-left" src="https://via.placeholder.com/500x300" style="" />
+    </div>
+
+    <div class="uk-width-1-2"><img alt="" class="uk-align-right" src="https://via.placeholder.com/500x300" style="" />
+    </div>
+
+    <div class="uk-width-1-2 uk-margin">
+        <p class="uk-text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumquetemporibus nequehic
+            vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia delectus, fugit doloremque
+            excepturisequi. Facilis!</p>
+    </div>
+</div>
+<!-- How we can help version 2 -->
+
+<div class="uk-grid uk-margin-large">
+    <div class="uk-width-1-1 uk-text-center uk-margin-large">
+        <h1>How we can help Version 2</h1>
+    </div>
+
+    <div class="uk-width-1-1 uk-width-medium-1-4">
+        <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
+            <h3 class="uk-panel-title">Company &amp; Culture</h3>
+
+            <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero sapiente dolor illum
+                    dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad molestiae quas
+                    explicabo distinctio error et?</p>
             </div>
         </div>
     </div>
 
-</div>
-    <div class="uk-grid uk-margin-large">
-        <div class="uk-width-1-2">
-            <h2>Checkout our case studies</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum beatae modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis, soluta magnam sequi!</p>
-            <a class="uk-button"href="#">Click here to learn more</a>
-        </div>
-        <div class="uk-width-1-2">
-            <h2>Ready to talk?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum
-                beatae modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis,
-                soluta magnam sequi!</p>
-            <a class="uk-button" href="tel:8772886040">Call: 877.288.6040</a>
+    <div class="uk-width-1-1 uk-width-medium-1-4">
+        <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
+            <h3 class="uk-panel-title">Company &amp; Culture</h3>
+
+            <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero sapiente dolor illum
+                    dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad molestiae quas
+                    explicabo distinctio error et?</p>
+            </div>
         </div>
     </div>
+
+    <div class="uk-width-1-1 uk-width-medium-1-4">
+        <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
+            <h3 class="uk-panel-title">Company &amp; Culture</h3>
+
+            <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero sapiente dolor illum
+                    dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad molestiae quas
+                    explicabo distinctio error et?</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="uk-width-1-1 uk-width-medium-1-4">
+        <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
+            <h3 class="uk-panel-title">Company &amp; Culture</h3>
+
+            <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero sapiente dolor illum
+                    dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad molestiae quas
+                    explicabo distinctio error et?</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="uk-grid uk-margin-large">
+    <div class="uk-width-1-2">
+        <h2>Checkout our case studies</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum beatae
+            modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis, soluta
+            magnam sequi!</p>
+        <a class="uk-button" href="#">Click here to learn more</a>
+    </div>
+
+    <div class="uk-width-1-2">
+        <h2>Ready to talk?</h2>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum beatae
+            modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis, soluta
+            magnam sequi!</p>
+        <a class="uk-button" href="tel:8772886040">Call: 877.288.6040</a>
+    </div>
+</div>
