--- a/rad.html
+++ b/rad.html
@@ -12,141 +12,98 @@
 </head>
 
 <!-- Copy only whats below -->
+<style>
+.uk-panel-box{
+    border:none;
+}
+    </style>
+<div class="tm-image uk-text-center"
+    style="background-image: url('http://www.d3g.com/images/homepage/BackgroundMainPictures/PlanReviewer.jpg'); height: 400px;">
+    <div class="uk-height-1-1 uk-vertical-align">
+        <div class="uk-vertical-align-middle tm-teaser">
+            <h1 class="uk-heading-large uk-margin-small" style="text-shadow: 2px 1px 1px #000000; text-align: center;"
+                data-uk-scrollspy="{cls:'uk-animation-fade', delay:1300}">Patner with the RAD-est <br /> Company in
+                Housing.
+            </h1>
+        </div>
+    </div>
+</div>
+<div class="uk-grid uk-margin-large">
+    <div class="uk-width-1-2">
+        <h2>RAD is confusing</h2>
+        <p>D3G can help! Our team of experts in Rental Assistance Demonstration (RAD) partner with you to guide your
+            project from concept to reality. With over 25 years of experience and more than 1,000 successful RAD
+            projects under our belt, you know you'll be picking a partner you can trust. If you have questions related
+            to HUD, RAD, FHA, Section 8 PBRA/PBV, LIHTC and mixed finance real estate repositioning the team at D3G is
+            here to help.</p>
+    </div>
+    <div class="uk-width-1-2">
+        <img class="uk-thumbnail-expand"  src="images/image--001.png" alt="">
+    </div>
+</div>
+<!-- Starting What We Do Section -->
+<div class="uk-grid uk-margin-large">
+    <div class="uk-width-1-1 uk-text-center uk-margin-large uk-panel-box-secondary" style="padding:40px 20px;">
+        <h1 class="uk-margin-large">Who We Are</h1> 
+        <h3 style="text-transform: none;">D3G is a full-service consultant on asset repositioning. Our expert knowledge of HUD’s programs and new policies means technical assistance you can depend on. Four out of the five largest Public Housing Agencies in the country have chosen D3G as their due diligence provider and consultant.</h3>
+    </div>
+    <div class="uk-width-1-1 uk-text-center">
+        <h1 class="uk-margin-large">We Provide:</h1>
+    </div>
+    <div class="uk-width-1-3 uk-panel-box uk-text-center">
+        <a class="uk-icon-large uk-icon-leaf"></a>
+        <p>Full-service consulting from our in-house team of housing professionals
+            on asset repositioning</p>
+    </div>
+    <div class="uk-width-1-3 uk-panel-box uk-text-center ">
+        <a class="uk-icon-large uk-icon-leaf"></a>
+        <p>A thorough review of your portfolio combined with strategic planning support.</p>
+    </div>
+    <div class="uk-width-1-3 uk-panel-box uk-text-center">
+        <a class="uk-icon-large uk-icon-leaf"></a>
+        <p>Identify funding sources based on project needs and future plans.</p>
+    </div>
+</div>
+<div class="uk-grid uk-margin-large uk-panel-box-secondary" style="padding:40px 0px;">
+    <div class="uk-width-1-1">
+        <blockquote>"We've worked with D3G for nearly 5 years. They have guided us through the entire RAD process and
+            helped us with all our due diligence. " - Name of Company</blockquote>
+    </div>
+</div>
+<!-- Starting Success Stories-->
+<div class="uk-grid uk-margin-large">
     <div class="uk-width-1-1 uk-text-center uk-margin-large">
-        <h2>
-            RAD can be confusing we can help...
-        </h2>
-    </div>
-<div class="uk-grid uk-margin-large">
-    <div class="uk-width-1-2">
-        <h1>Pain Points</h1>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-            est laborum.</p>
+        <h1>Success Stories</h1>
+        <h3 style="text-transform: none;">We've provided due diligence and consulting services for Public Housing
+            Agencies all throughout the country—including some of the largest and smallest PHA's. Check out some of the
+            projects we've supported:
+        </h3>
     </div>
     <div class="uk-width-1-2">
-        <img src="https://via.placeholder.com/400" alt="">
+        <h4>Courtyard at Riverview - Philadephia</h4>
+        <img class="uk-thumbnail-expand" src="images/image--005.png" alt="">
+    </div>
+    <div class="uk-width-1-2">
+        <h4>Ocean Bay - Queens, New York</h4>
+        <img class="uk-thumbnail-expand" src="images/image--006.png" alt="">
     </div>
 </div>
-    <!-- Starting What We Do Section -->
-
 <div class="uk-grid uk-margin-large">
-<div class="uk-width-1-1 uk-text-center uk-margin-large">
-    <h1 class="uk-margin-large">What We Do</h1>
-</div>
-<div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center">
-    <a class="uk-icon-large uk-icon-check"></a>
-    <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        cumquetemporibus neque hic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
-        delectus, fugit doloremque excepturisequi.Facilis!</p>
-</div>
-<div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center ">
-    <a class="uk-icon-large uk-icon-check"></a>
-    <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
-        delectus, fugit doloremque excepturisequi. Facilis!</p>
-</div>
-<div class="uk-width-1-3 uk-margin uk-panel-box  uk-text-center">
-    <a class="uk-icon-large uk-icon-check "></a>
-    <p class="uk-text-left uk-panel-space">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in mollitia
-        delectus, fugit doloremque excepturisequi. Facilis!</p>
-</div>
-</div>
-    <!-- Starting How we can help section -->
-    <div class="uk-grid uk-margin-large">
-        <div class="uk-width-1-1 uk-text-center uk-margin-large">
-            <h1>How we can help</h1>
-        </div>
-        <div class="uk-width-1-2">
-            <p class="uk-text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in
-                mollitia
-                delectus, fugit doloremque excepturisequi. Facilis!</p>
-        </div>
-        <div class="uk-width-1-2">
-            <img class=" uk-align-left" src="https://via.placeholder.com/500x300" alt="">
-        </div>
-        <div class="uk-width-1-2">
-            <img class=" uk-align-right" src="https://via.placeholder.com/500x300" alt="">
-        </div>
-        <div class="uk-width-1-2 uk-margin">
-            <p class="uk-text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                cumquetemporibus nequehic vitae possimusrecusandae dolor numquam quaerat error dolorum suscipit in
-                mollitia delectus, fugit doloremque excepturisequi. Facilis!</p>
-        </div>
+    <div class="uk-width-1-2">
+        <h4>Waterman Gardens - San Bernardino, California</h4>
+        <img class="uk-thumbnail-expand" src="images/image--007.png" alt="">
     </div>
-    <!-- How we can help version 2 -->
-    <div class="uk-grid uk-margin-large">
-        <div class="uk-width-1-1 uk-text-center uk-margin-large">
-            <h1>How we can help Version 2</h1>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="uk-width-1-1 uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-header uk-panel uk-panel-blank uk-align-center">
-                <h3 class="uk-panel-title">Company &amp; Culture</h3>
-                <div class="uk-border-rounded uk-text-justify" style="overflow: hidden;">
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium totam libero
-                        sapiente
-                        dolor illum dignissimos itaque molestias! Reiciendis, ipsa magni delectus natus nihil ad
-                        molestiae
-                        quas explicabo distinctio error et?</p>
-                    </a>
-                </div>
-            </div>
-        </div>
+    <div class="uk-width-1-2">
+        <h4>San Francisco, California</h4>
+        <img class="uk-thumbnail-expand" src="images/image--008.png" alt="">
     </div>
-
 </div>
-    <div class="uk-grid uk-margin-large">
-        <div class="uk-width-1-2">
-            <h2>Checkout our case studies</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum beatae modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis, soluta magnam sequi!</p>
-            <a class="uk-button"href="#">Click here to learn more</a>
-        </div>
-        <div class="uk-width-1-2">
-            <h2>Ready to talk?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet porro aspernatur vitae praesentium rerum
-                beatae modi dignissimos quasi explicabo quo totam, quidem tenetur, ut impedit consequuntur reiciendis,
-                soluta magnam sequi!</p>
-            <a class="uk-button" href="tel:8772886040">Call: 877.288.6040</a>
-        </div>
+<!-- Contact Section -->
+<div class="uk-grid uk-margin-large">
+    <div class="uk-width-1-1">
+        <h2>Ready to discuss your project? </h2>
+        <p>Looking for help and need questions answered? Enter your contact information and a D3G representative
+            contact you. Or, just give us a call at: 877.288.6040</p>
+        <a class="uk-button" href="tel:8772886040">Call: 877.288.6040</a>
     </div>
+</div>
